server/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    colon
    cteFloat
    cteInt
    then

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> programType SAVEPROGID semicolon main qpMainJump BLOQUE qpEnd
Rule 2     PROGRAMA -> programType SAVEPROGID semicolon VARS main qpMainJump BLOQUE qpEnd
Rule 3     PROGRAMA -> programType SAVEPROGID semicolon FUNCS main qpMainJump BLOQUE qpEnd
Rule 4     PROGRAMA -> programType SAVEPROGID semicolon VARS FUNCS main qpMainJump BLOQUE qpEnd
Rule 5     qpMainJump -> empty
Rule 6     qpEnd -> empty
Rule 7     SAVEPROGID -> id
Rule 8     MOREVARS -> VARS
Rule 9     MOREVARS -> empty
Rule 10    VARS -> TIPO VARSAUX semicolon MOREVARS
Rule 11    VARSCOMMA -> comma VARSAUX
Rule 12    VARSCOMMA -> empty
Rule 13    FUNCS -> function FUNCTIPO SAVEFUNCID leftParenthesis FUNCPARAM rightParenthesis leftBracket qpFuncsPN5 FUNCSVARS qpFuncsPN5Pt2 qpFuncsPN6 FUNCSESTATUTOS return FUNCEXP semicolon qpFuncsPN7 PNRIGHTBTACKETFUNC MOREFUNCS
Rule 14    MOREFUNCS -> FUNCS
Rule 15    MOREFUNCS -> empty
Rule 16    PNRIGHTBTACKETFUNC -> rightBracket
Rule 17    SAVEFUNCID -> id
Rule 18    FUNCTIPO -> TIPO
Rule 19    FUNCTIPO -> void
Rule 20    FUNCPARAM -> PARAM PARAMSCOMMA
Rule 21    PARAMSCOMMA -> comma FUNCPARAM
Rule 22    PARAMSCOMMA -> empty
Rule 23    FUNCSVARS -> VARS FUNCSVARS
Rule 24    FUNCSVARS -> empty
Rule 25    FUNCSESTATUTOS -> ESTATUTO FUNCSESTATUTOS
Rule 26    FUNCSESTATUTOS -> empty
Rule 27    FUNCEXP -> EXPR
Rule 28    FUNCEXP -> empty
Rule 29    BLOQUE -> leftBracket BLOQESTATUTO rightBracket
Rule 30    BLOQESTATUTO -> ESTATUTO BLOQESTATUTO
Rule 31    BLOQESTATUTO -> empty
Rule 32    TIPO -> intType
Rule 33    TIPO -> floatType
Rule 34    PARAM -> TIPO id
Rule 35    VARSAUX -> VARSAUXID ARRAYDIMENSION ARRAYDIMENSION qpArrPN7 VARSCOMMA
Rule 36    VARSAUXID -> id
Rule 37    ARRAYDIMENSION -> leftSqBracket qpArrPN6 qpArrPN2 qpArrPN3 intArrDim rightSqBracket
Rule 38    ARRAYDIMENSION -> empty
Rule 39    qpArrPN2 -> empty
Rule 40    qpArrPN3 -> empty
Rule 41    qpArrPN6 -> empty
Rule 42    qpArrPN7 -> empty
Rule 43    intArrDim -> int
Rule 44    ESTATUTO -> ASSIGN
Rule 45    ESTATUTO -> PRINT
Rule 46    ESTATUTO -> COND
Rule 47    ESTATUTO -> LLAMADAVOID
Rule 48    ESTATUTO -> CICLO
Rule 49    VARIABLE -> qpExpPN1
Rule 50    VARIABLE -> qpArrCallPN1 qpArrCallPN2 VARIABLEIDM qpArrCallPN5
Rule 51    VARIABLE -> qpArrCallPN1 qpArrCallPN2 VARIABLEIDM qpArrCallPN4 VARIABLEIDM qpArrCallPN5
Rule 52    qpArrCallPN1 -> id
Rule 53    qpArrCallPN2 -> empty
Rule 54    qpArrCallPN3 -> empty
Rule 55    qpArrCallPN4 -> empty
Rule 56    qpArrCallPN5 -> empty
Rule 57    VARIABLEIDM -> leftSqBracket EXPR qpArrCallPN3 rightSqBracket
Rule 58    EXPR -> TERMINO MASOMENOST qpExpPN4
Rule 59    MASOMENOST -> qpExpPN3 TERMINO qpExpPN4 MASOMENOST
Rule 60    MASOMENOST -> empty
Rule 61    TERMINO -> FACTOR PORENTREF qpExpPN5
Rule 62    PORENTREF -> qpExpPN2 FACTOR qpExpPN5 PORENTREF
Rule 63    PORENTREF -> empty
Rule 64    FACTOR -> VARIABLE
Rule 65    FACTOR -> leftParenthesis minusSign FACTOR qpExpPN8 rightParenthesis
Rule 66    FACTOR -> NUMERO
Rule 67    FACTOR -> leftParenthesis qpExpPN6 EXPR rightParenthesis qpExpPN7
Rule 68    FACTOR -> LLAMADA
Rule 69    VARIABLEFACTOR -> VARIABLE
Rule 70    qpExpPN1 -> id
Rule 71    qpExpPN2 -> multiplicationSign
Rule 72    qpExpPN2 -> divisionSign
Rule 73    qpExpPN3 -> plusSign
Rule 74    qpExpPN3 -> minusSign
Rule 75    qpExpPN4 -> empty
Rule 76    qpExpPN5 -> empty
Rule 77    qpExpPN6 -> empty
Rule 78    qpExpPN7 -> empty
Rule 79    qpExpPN8 -> empty
Rule 80    qpAssignPN1 -> empty
Rule 81    qpInputPN1 -> empty
Rule 82    qpPrintPN1 -> empty
Rule 83    qpPrintPN2 -> cteString
Rule 84    qpBoolPN1 -> empty
Rule 85    qpBoolPN2 -> empty
Rule 86    qpFuncsPN5 -> empty
Rule 87    qpFuncsPN5Pt2 -> empty
Rule 88    qpFuncsPN6 -> empty
Rule 89    qpFuncsPN7 -> empty
Rule 90    EXPCOMPARATIVA -> EXPR qpBoolPN1 COMPARISONOP EXPR qpBoolPN2
Rule 91    COMPARISONOP -> greaterThan
Rule 92    COMPARISONOP -> lessThan
Rule 93    COMPARISONOP -> notEqual
Rule 94    COMPARISONOP -> comparison
Rule 95    COND -> if leftParenthesis EXPCOMPARATIVA qpCondPN1 rightParenthesis BLOQUE qpCondPN2
Rule 96    COND -> if leftParenthesis EXPCOMPARATIVA qpCondPN1 rightParenthesis BLOQUE qpCondPN3 else BLOQUE qpCondPN2
Rule 97    qpCondPN1 -> empty
Rule 98    qpCondPN2 -> empty
Rule 99    qpCondPN3 -> empty
Rule 100   qpCicloPN1 -> empty
Rule 101   qpCicloPN2 -> empty
Rule 102   qpCicloPN3 -> empty
Rule 103   qpLlamadaPN2 -> empty
Rule 104   qpLlamadaPN3 -> empty
Rule 105   qpLlamadaPN4 -> empty
Rule 106   qpLlamadaPN5 -> empty
Rule 107   qpLlamadaPN6 -> empty
Rule 108   LLAMADA -> LLAMADAID leftParenthesis qpLlamadaPN2 LLAMADAEXPR qpLlamadaPN5 rightParenthesis qpLlamadaPN6
Rule 109   LLAMADA -> LLAMADAID leftParenthesis qpLlamadaPN2 rightParenthesis qpLlamadaPN6
Rule 110   LLAMADAID -> id
Rule 111   LLAMADAVOID -> LLAMADAID leftParenthesis qpLlamadaPN2 LLAMADAEXPR qpLlamadaPN5 rightParenthesis qpLlamadaPN6 semicolon
Rule 112   LLAMADAVOID -> LLAMADAID leftParenthesis qpLlamadaPN2 rightParenthesis qpLlamadaPN6 semicolon
Rule 113   LLAMADAEXPR -> EXPR qpLlamadaPN3 LLAMADAEXPRAUX
Rule 114   LLAMADAEXPRAUX -> qpLlamadaPN4 comma LLAMADAEXPR
Rule 115   LLAMADAEXPRAUX -> empty
Rule 116   CICLO -> while qpCicloPN1 leftParenthesis EXPCOMPARATIVA qpCicloPN2 rightParenthesis BLOQUE qpCicloPN3
Rule 117   NUMERO -> int
Rule 118   NUMERO -> float
Rule 119   ASSIGN -> VARIABLE equalSign EXPR semicolon qpAssignPN1
Rule 120   ASSIGN -> VARIABLE equalSign INPUT semicolon qpInputPN1
Rule 121   INPUT -> input
Rule 122   PRINT -> print leftParenthesis PRINTARGS rightParenthesis semicolon
Rule 123   PRINTARGS -> EXPR qpPrintPN1 EXPRARGSAUX
Rule 124   PRINTARGS -> qpPrintPN2 EXPRARGSAUX
Rule 125   EXPRARGSAUX -> comma PRINTARGS
Rule 126   EXPRARGSAUX -> empty
Rule 127   empty -> <empty>

Terminals, with rules where they appear

colon                : 
comma                : 11 21 114 125
comparison           : 94
cteFloat             : 
cteInt               : 
cteString            : 83
divisionSign         : 72
else                 : 96
equalSign            : 119 120
error                : 
float                : 118
floatType            : 33
function             : 13
greaterThan          : 91
id                   : 7 17 34 36 52 70 110
if                   : 95 96
input                : 121
int                  : 43 117
intType              : 32
leftBracket          : 13 29
leftParenthesis      : 13 65 67 95 96 108 109 111 112 116 122
leftSqBracket        : 37 57
lessThan             : 92
main                 : 1 2 3 4
minusSign            : 65 74
multiplicationSign   : 71
notEqual             : 93
plusSign             : 73
print                : 122
programType          : 1 2 3 4
return               : 13
rightBracket         : 16 29
rightParenthesis     : 13 65 67 95 96 108 109 111 112 116 122
rightSqBracket       : 37 57
semicolon            : 1 2 3 4 10 13 111 112 119 120 122
then                 : 
void                 : 19
while                : 116

Nonterminals, with rules where they appear

ARRAYDIMENSION       : 35 35
ASSIGN               : 44
BLOQESTATUTO         : 29 30
BLOQUE               : 1 2 3 4 95 96 96 116
CICLO                : 48
COMPARISONOP         : 90
COND                 : 46
ESTATUTO             : 25 30
EXPCOMPARATIVA       : 95 96 116
EXPR                 : 27 57 67 90 90 113 119 123
EXPRARGSAUX          : 123 124
FACTOR               : 61 62 65
FUNCEXP              : 13
FUNCPARAM            : 13 21
FUNCS                : 3 4 14
FUNCSESTATUTOS       : 13 25
FUNCSVARS            : 13 23
FUNCTIPO             : 13
INPUT                : 120
LLAMADA              : 68
LLAMADAEXPR          : 108 111 114
LLAMADAEXPRAUX       : 113
LLAMADAID            : 108 109 111 112
LLAMADAVOID          : 47
MASOMENOST           : 58 59
MOREFUNCS            : 13
MOREVARS             : 10
NUMERO               : 66
PARAM                : 20
PARAMSCOMMA          : 20
PNRIGHTBTACKETFUNC   : 13
PORENTREF            : 61 62
PRINT                : 45
PRINTARGS            : 122 125
PROGRAMA             : 0
SAVEFUNCID           : 13
SAVEPROGID           : 1 2 3 4
TERMINO              : 58 59
TIPO                 : 10 18 34
VARIABLE             : 64 69 119 120
VARIABLEFACTOR       : 
VARIABLEIDM          : 50 51 51
VARS                 : 2 4 8 23
VARSAUX              : 10 11
VARSAUXID            : 35
VARSCOMMA            : 35
empty                : 5 6 9 12 15 22 24 26 28 31 38 39 40 41 42 53 54 55 56 60 63 75 76 77 78 79 80 81 82 84 85 86 87 88 89 97 98 99 100 101 102 103 104 105 106 107 115 126
intArrDim            : 37
qpArrCallPN1         : 50 51
qpArrCallPN2         : 50 51
qpArrCallPN3         : 57
qpArrCallPN4         : 51
qpArrCallPN5         : 50 51
qpArrPN2             : 37
qpArrPN3             : 37
qpArrPN6             : 37
qpArrPN7             : 35
qpAssignPN1          : 119
qpBoolPN1            : 90
qpBoolPN2            : 90
qpCicloPN1           : 116
qpCicloPN2           : 116
qpCicloPN3           : 116
qpCondPN1            : 95 96
qpCondPN2            : 95 96
qpCondPN3            : 96
qpEnd                : 1 2 3 4
qpExpPN1             : 49
qpExpPN2             : 62
qpExpPN3             : 59
qpExpPN4             : 58 59
qpExpPN5             : 61 62
qpExpPN6             : 67
qpExpPN7             : 67
qpExpPN8             : 65
qpFuncsPN5           : 13
qpFuncsPN5Pt2        : 13
qpFuncsPN6           : 13
qpFuncsPN7           : 13
qpInputPN1           : 120
qpLlamadaPN2         : 108 109 111 112
qpLlamadaPN3         : 113
qpLlamadaPN4         : 114
qpLlamadaPN5         : 108 111
qpLlamadaPN6         : 108 109 111 112
qpMainJump           : 1 2 3 4
qpPrintPN1           : 123
qpPrintPN2           : 124

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . programType SAVEPROGID semicolon main qpMainJump BLOQUE qpEnd
    (2) PROGRAMA -> . programType SAVEPROGID semicolon VARS main qpMainJump BLOQUE qpEnd
    (3) PROGRAMA -> . programType SAVEPROGID semicolon FUNCS main qpMainJump BLOQUE qpEnd
    (4) PROGRAMA -> . programType SAVEPROGID semicolon VARS FUNCS main qpMainJump BLOQUE qpEnd

    programType     shift and go to state 2

    PROGRAMA                       shift and go to state 1

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> programType . SAVEPROGID semicolon main qpMainJump BLOQUE qpEnd
    (2) PROGRAMA -> programType . SAVEPROGID semicolon VARS main qpMainJump BLOQUE qpEnd
    (3) PROGRAMA -> programType . SAVEPROGID semicolon FUNCS main qpMainJump BLOQUE qpEnd
    (4) PROGRAMA -> programType . SAVEPROGID semicolon VARS FUNCS main qpMainJump BLOQUE qpEnd
    (7) SAVEPROGID -> . id

    id              shift and go to state 4

    SAVEPROGID                     shift and go to state 3

state 3

    (1) PROGRAMA -> programType SAVEPROGID . semicolon main qpMainJump BLOQUE qpEnd
    (2) PROGRAMA -> programType SAVEPROGID . semicolon VARS main qpMainJump BLOQUE qpEnd
    (3) PROGRAMA -> programType SAVEPROGID . semicolon FUNCS main qpMainJump BLOQUE qpEnd
    (4) PROGRAMA -> programType SAVEPROGID . semicolon VARS FUNCS main qpMainJump BLOQUE qpEnd

    semicolon       shift and go to state 5


state 4

    (7) SAVEPROGID -> id .

    semicolon       reduce using rule 7 (SAVEPROGID -> id .)


state 5

    (1) PROGRAMA -> programType SAVEPROGID semicolon . main qpMainJump BLOQUE qpEnd
    (2) PROGRAMA -> programType SAVEPROGID semicolon . VARS main qpMainJump BLOQUE qpEnd
    (3) PROGRAMA -> programType SAVEPROGID semicolon . FUNCS main qpMainJump BLOQUE qpEnd
    (4) PROGRAMA -> programType SAVEPROGID semicolon . VARS FUNCS main qpMainJump BLOQUE qpEnd
    (10) VARS -> . TIPO VARSAUX semicolon MOREVARS
    (13) FUNCS -> . function FUNCTIPO SAVEFUNCID leftParenthesis FUNCPARAM rightParenthesis leftBracket qpFuncsPN5 FUNCSVARS qpFuncsPN5Pt2 qpFuncsPN6 FUNCSESTATUTOS return FUNCEXP semicolon qpFuncsPN7 PNRIGHTBTACKETFUNC MOREFUNCS
    (32) TIPO -> . intType
    (33) TIPO -> . floatType

    main            shift and go to state 6
    function        shift and go to state 10
    intType         shift and go to state 11
    floatType       shift and go to state 12

    VARS                           shift and go to state 7
    FUNCS                          shift and go to state 8
    TIPO                           shift and go to state 9

state 6

    (1) PROGRAMA -> programType SAVEPROGID semicolon main . qpMainJump BLOQUE qpEnd
    (5) qpMainJump -> . empty
    (127) empty -> .

    leftBracket     reduce using rule 127 (empty -> .)

    qpMainJump                     shift and go to state 13
    empty                          shift and go to state 14

state 7

    (2) PROGRAMA -> programType SAVEPROGID semicolon VARS . main qpMainJump BLOQUE qpEnd
    (4) PROGRAMA -> programType SAVEPROGID semicolon VARS . FUNCS main qpMainJump BLOQUE qpEnd
    (13) FUNCS -> . function FUNCTIPO SAVEFUNCID leftParenthesis FUNCPARAM rightParenthesis leftBracket qpFuncsPN5 FUNCSVARS qpFuncsPN5Pt2 qpFuncsPN6 FUNCSESTATUTOS return FUNCEXP semicolon qpFuncsPN7 PNRIGHTBTACKETFUNC MOREFUNCS

    main            shift and go to state 15
    function        shift and go to state 10

    FUNCS                          shift and go to state 16

state 8

    (3) PROGRAMA -> programType SAVEPROGID semicolon FUNCS . main qpMainJump BLOQUE qpEnd

    main            shift and go to state 17


state 9

    (10) VARS -> TIPO . VARSAUX semicolon MOREVARS
    (35) VARSAUX -> . VARSAUXID ARRAYDIMENSION ARRAYDIMENSION qpArrPN7 VARSCOMMA
    (36) VARSAUXID -> . id

    id              shift and go to state 20

    VARSAUX                        shift and go to state 18
    VARSAUXID                      shift and go to state 19

state 10

    (13) FUNCS -> function . FUNCTIPO SAVEFUNCID leftParenthesis FUNCPARAM rightParenthesis leftBracket qpFuncsPN5 FUNCSVARS qpFuncsPN5Pt2 qpFuncsPN6 FUNCSESTATUTOS return FUNCEXP semicolon qpFuncsPN7 PNRIGHTBTACKETFUNC MOREFUNCS
    (18) FUNCTIPO -> . TIPO
    (19) FUNCTIPO -> . void
    (32) TIPO -> . intType
    (33) TIPO -> . floatType

    void            shift and go to state 23
    intType         shift and go to state 11
    floatType       shift and go to state 12

    FUNCTIPO                       shift and go to state 21
    TIPO                           shift and go to state 22

state 11

    (32) TIPO -> intType .

    id              reduce using rule 32 (TIPO -> intType .)


state 12

    (33) TIPO -> floatType .

    id              reduce using rule 33 (TIPO -> floatType .)


state 13

    (1) PROGRAMA -> programType SAVEPROGID semicolon main qpMainJump . BLOQUE qpEnd
    (29) BLOQUE -> . leftBracket BLOQESTATUTO rightBracket

    leftBracket     shift and go to state 25

    BLOQUE                         shift and go to state 24

state 14

    (5) qpMainJump -> empty .

    leftBracket     reduce using rule 5 (qpMainJump -> empty .)


state 15

    (2) PROGRAMA -> programType SAVEPROGID semicolon VARS main . qpMainJump BLOQUE qpEnd
    (5) qpMainJump -> . empty
    (127) empty -> .

    leftBracket     reduce using rule 127 (empty -> .)

    qpMainJump                     shift and go to state 26
    empty                          shift and go to state 14

state 16

    (4) PROGRAMA -> programType SAVEPROGID semicolon VARS FUNCS . main qpMainJump BLOQUE qpEnd

    main            shift and go to state 27


state 17

    (3) PROGRAMA -> programType SAVEPROGID semicolon FUNCS main . qpMainJump BLOQUE qpEnd
    (5) qpMainJump -> . empty
    (127) empty -> .

    leftBracket     reduce using rule 127 (empty -> .)

    qpMainJump                     shift and go to state 28
    empty                          shift and go to state 14

state 18

    (10) VARS -> TIPO VARSAUX . semicolon MOREVARS

    semicolon       shift and go to state 29


state 19

    (35) VARSAUX -> VARSAUXID . ARRAYDIMENSION ARRAYDIMENSION qpArrPN7 VARSCOMMA
    (37) ARRAYDIMENSION -> . leftSqBracket qpArrPN6 qpArrPN2 qpArrPN3 intArrDim rightSqBracket
    (38) ARRAYDIMENSION -> . empty
    (127) empty -> .

  ! shift/reduce conflict for leftSqBracket resolved as shift
    leftSqBracket   shift and go to state 31
    comma           reduce using rule 127 (empty -> .)
    semicolon       reduce using rule 127 (empty -> .)

  ! leftSqBracket   [ reduce using rule 127 (empty -> .) ]

    ARRAYDIMENSION                 shift and go to state 30
    empty                          shift and go to state 32

state 20

    (36) VARSAUXID -> id .

    leftSqBracket   reduce using rule 36 (VARSAUXID -> id .)
    comma           reduce using rule 36 (VARSAUXID -> id .)
    semicolon       reduce using rule 36 (VARSAUXID -> id .)


state 21

    (13) FUNCS -> function FUNCTIPO . SAVEFUNCID leftParenthesis FUNCPARAM rightParenthesis leftBracket qpFuncsPN5 FUNCSVARS qpFuncsPN5Pt2 qpFuncsPN6 FUNCSESTATUTOS return FUNCEXP semicolon qpFuncsPN7 PNRIGHTBTACKETFUNC MOREFUNCS
    (17) SAVEFUNCID -> . id

    id              shift and go to state 34

    SAVEFUNCID                     shift and go to state 33

state 22

    (18) FUNCTIPO -> TIPO .

    id              reduce using rule 18 (FUNCTIPO -> TIPO .)


state 23

    (19) FUNCTIPO -> void .

    id              reduce using rule 19 (FUNCTIPO -> void .)


state 24

    (1) PROGRAMA -> programType SAVEPROGID semicolon main qpMainJump BLOQUE . qpEnd
    (6) qpEnd -> . empty
    (127) empty -> .

    $end            reduce using rule 127 (empty -> .)

    qpEnd                          shift and go to state 35
    empty                          shift and go to state 36

state 25

    (29) BLOQUE -> leftBracket . BLOQESTATUTO rightBracket
    (30) BLOQESTATUTO -> . ESTATUTO BLOQESTATUTO
    (31) BLOQESTATUTO -> . empty
    (44) ESTATUTO -> . ASSIGN
    (45) ESTATUTO -> . PRINT
    (46) ESTATUTO -> . COND
    (47) ESTATUTO -> . LLAMADAVOID
    (48) ESTATUTO -> . CICLO
    (127) empty -> .
    (119) ASSIGN -> . VARIABLE equalSign EXPR semicolon qpAssignPN1
    (120) ASSIGN -> . VARIABLE equalSign INPUT semicolon qpInputPN1
    (122) PRINT -> . print leftParenthesis PRINTARGS rightParenthesis semicolon
    (95) COND -> . if leftParenthesis EXPCOMPARATIVA qpCondPN1 rightParenthesis BLOQUE qpCondPN2
    (96) COND -> . if leftParenthesis EXPCOMPARATIVA qpCondPN1 rightParenthesis BLOQUE qpCondPN3 else BLOQUE qpCondPN2
    (111) LLAMADAVOID -> . LLAMADAID leftParenthesis qpLlamadaPN2 LLAMADAEXPR qpLlamadaPN5 rightParenthesis qpLlamadaPN6 semicolon
    (112) LLAMADAVOID -> . LLAMADAID leftParenthesis qpLlamadaPN2 rightParenthesis qpLlamadaPN6 semicolon
    (116) CICLO -> . while qpCicloPN1 leftParenthesis EXPCOMPARATIVA qpCicloPN2 rightParenthesis BLOQUE qpCicloPN3
    (49) VARIABLE -> . qpExpPN1
    (50) VARIABLE -> . qpArrCallPN1 qpArrCallPN2 VARIABLEIDM qpArrCallPN5
    (51) VARIABLE -> . qpArrCallPN1 qpArrCallPN2 VARIABLEIDM qpArrCallPN4 VARIABLEIDM qpArrCallPN5
    (110) LLAMADAID -> . id
    (70) qpExpPN1 -> . id
    (52) qpArrCallPN1 -> . id

    rightBracket    reduce using rule 127 (empty -> .)
    print           shift and go to state 46
    if              shift and go to state 47
    while           shift and go to state 49
    id              shift and go to state 52

    BLOQESTATUTO                   shift and go to state 37
    ESTATUTO                       shift and go to state 38
    empty                          shift and go to state 39
    ASSIGN                         shift and go to state 40
    PRINT                          shift and go to state 41
    COND                           shift and go to state 42
    LLAMADAVOID                    shift and go to state 43
    CICLO                          shift and go to state 44
    VARIABLE                       shift and go to state 45
    LLAMADAID                      shift and go to state 48
    qpExpPN1                       shift and go to state 50
    qpArrCallPN1                   shift and go to state 51

state 26

    (2) PROGRAMA -> programType SAVEPROGID semicolon VARS main qpMainJump . BLOQUE qpEnd
    (29) BLOQUE -> . leftBracket BLOQESTATUTO rightBracket

    leftBracket     shift and go to state 25

    BLOQUE                         shift and go to state 53

state 27

    (4) PROGRAMA -> programType SAVEPROGID semicolon VARS FUNCS main . qpMainJump BLOQUE qpEnd
    (5) qpMainJump -> . empty
    (127) empty -> .

    leftBracket     reduce using rule 127 (empty -> .)

    qpMainJump                     shift and go to state 54
    empty                          shift and go to state 14

state 28

    (3) PROGRAMA -> programType SAVEPROGID semicolon FUNCS main qpMainJump . BLOQUE qpEnd
    (29) BLOQUE -> . leftBracket BLOQESTATUTO rightBracket

    leftBracket     shift and go to state 25

    BLOQUE                         shift and go to state 55

state 29

    (10) VARS -> TIPO VARSAUX semicolon . MOREVARS
    (8) MOREVARS -> . VARS
    (9) MOREVARS -> . empty
    (10) VARS -> . TIPO VARSAUX semicolon MOREVARS
    (127) empty -> .
    (32) TIPO -> . intType
    (33) TIPO -> . floatType

  ! shift/reduce conflict for intType resolved as shift
  ! shift/reduce conflict for floatType resolved as shift
    main            reduce using rule 127 (empty -> .)
    function        reduce using rule 127 (empty -> .)
    print           reduce using rule 127 (empty -> .)
    if              reduce using rule 127 (empty -> .)
    while           reduce using rule 127 (empty -> .)
    id              reduce using rule 127 (empty -> .)
    return          reduce using rule 127 (empty -> .)
    intType         shift and go to state 11
    floatType       shift and go to state 12

  ! intType         [ reduce using rule 127 (empty -> .) ]
  ! floatType       [ reduce using rule 127 (empty -> .) ]

    TIPO                           shift and go to state 9
    MOREVARS                       shift and go to state 56
    VARS                           shift and go to state 57
    empty                          shift and go to state 58

state 30

    (35) VARSAUX -> VARSAUXID ARRAYDIMENSION . ARRAYDIMENSION qpArrPN7 VARSCOMMA
    (37) ARRAYDIMENSION -> . leftSqBracket qpArrPN6 qpArrPN2 qpArrPN3 intArrDim rightSqBracket
    (38) ARRAYDIMENSION -> . empty
    (127) empty -> .

    leftSqBracket   shift and go to state 31
    comma           reduce using rule 127 (empty -> .)
    semicolon       reduce using rule 127 (empty -> .)

    ARRAYDIMENSION                 shift and go to state 59
    empty                          shift and go to state 32

state 31

    (37) ARRAYDIMENSION -> leftSqBracket . qpArrPN6 qpArrPN2 qpArrPN3 intArrDim rightSqBracket
    (41) qpArrPN6 -> . empty
    (127) empty -> .

    int             reduce using rule 127 (empty -> .)

    qpArrPN6                       shift and go to state 60
    empty                          shift and go to state 61

state 32

    (38) ARRAYDIMENSION -> empty .

    leftSqBracket   reduce using rule 38 (ARRAYDIMENSION -> empty .)
    comma           reduce using rule 38 (ARRAYDIMENSION -> empty .)
    semicolon       reduce using rule 38 (ARRAYDIMENSION -> empty .)


state 33

    (13) FUNCS -> function FUNCTIPO SAVEFUNCID . leftParenthesis FUNCPARAM rightParenthesis leftBracket qpFuncsPN5 FUNCSVARS qpFuncsPN5Pt2 qpFuncsPN6 FUNCSESTATUTOS return FUNCEXP semicolon qpFuncsPN7 PNRIGHTBTACKETFUNC MOREFUNCS

    leftParenthesis shift and go to state 62


state 34

    (17) SAVEFUNCID -> id .

    leftParenthesis reduce using rule 17 (SAVEFUNCID -> id .)


state 35

    (1) PROGRAMA -> programType SAVEPROGID semicolon main qpMainJump BLOQUE qpEnd .

    $end            reduce using rule 1 (PROGRAMA -> programType SAVEPROGID semicolon main qpMainJump BLOQUE qpEnd .)


state 36

    (6) qpEnd -> empty .

    $end            reduce using rule 6 (qpEnd -> empty .)


state 37

    (29) BLOQUE -> leftBracket BLOQESTATUTO . rightBracket

    rightBracket    shift and go to state 63


state 38

    (30) BLOQESTATUTO -> ESTATUTO . BLOQESTATUTO
    (30) BLOQESTATUTO -> . ESTATUTO BLOQESTATUTO
    (31) BLOQESTATUTO -> . empty
    (44) ESTATUTO -> . ASSIGN
    (45) ESTATUTO -> . PRINT
    (46) ESTATUTO -> . COND
    (47) ESTATUTO -> . LLAMADAVOID
    (48) ESTATUTO -> . CICLO
    (127) empty -> .
    (119) ASSIGN -> . VARIABLE equalSign EXPR semicolon qpAssignPN1
    (120) ASSIGN -> . VARIABLE equalSign INPUT semicolon qpInputPN1
    (122) PRINT -> . print leftParenthesis PRINTARGS rightParenthesis semicolon
    (95) COND -> . if leftParenthesis EXPCOMPARATIVA qpCondPN1 rightParenthesis BLOQUE qpCondPN2
    (96) COND -> . if leftParenthesis EXPCOMPARATIVA qpCondPN1 rightParenthesis BLOQUE qpCondPN3 else BLOQUE qpCondPN2
    (111) LLAMADAVOID -> . LLAMADAID leftParenthesis qpLlamadaPN2 LLAMADAEXPR qpLlamadaPN5 rightParenthesis qpLlamadaPN6 semicolon
    (112) LLAMADAVOID -> . LLAMADAID leftParenthesis qpLlamadaPN2 rightParenthesis qpLlamadaPN6 semicolon
    (116) CICLO -> . while qpCicloPN1 leftParenthesis EXPCOMPARATIVA qpCicloPN2 rightParenthesis BLOQUE qpCicloPN3
    (49) VARIABLE -> . qpExpPN1
    (50) VARIABLE -> . qpArrCallPN1 qpArrCallPN2 VARIABLEIDM qpArrCallPN5
    (51) VARIABLE -> . qpArrCallPN1 qpArrCallPN2 VARIABLEIDM qpArrCallPN4 VARIABLEIDM qpArrCallPN5
    (110) LLAMADAID -> . id
    (70) qpExpPN1 -> . id
    (52) qpArrCallPN1 -> . id

    rightBracket    reduce using rule 127 (empty -> .)
    print           shift and go to state 46
    if              shift and go to state 47
    while           shift and go to state 49
    id              shift and go to state 52

    ESTATUTO                       shift and go to state 38
    BLOQESTATUTO                   shift and go to state 64
    empty                          shift and go to state 39
    ASSIGN                         shift and go to state 40
    PRINT                          shift and go to state 41
    COND                           shift and go to state 42
    LLAMADAVOID                    shift and go to state 43
    CICLO                          shift and go to state 44
    VARIABLE                       shift and go to state 45
    LLAMADAID                      shift and go to state 48
    qpExpPN1                       shift and go to state 50
    qpArrCallPN1                   shift and go to state 51

state 39

    (31) BLOQESTATUTO -> empty .

    rightBracket    reduce using rule 31 (BLOQESTATUTO -> empty .)


state 40

    (44) ESTATUTO -> ASSIGN .

    print           reduce using rule 44 (ESTATUTO -> ASSIGN .)
    if              reduce using rule 44 (ESTATUTO -> ASSIGN .)
    while           reduce using rule 44 (ESTATUTO -> ASSIGN .)
    id              reduce using rule 44 (ESTATUTO -> ASSIGN .)
    rightBracket    reduce using rule 44 (ESTATUTO -> ASSIGN .)
    return          reduce using rule 44 (ESTATUTO -> ASSIGN .)


state 41

    (45) ESTATUTO -> PRINT .

    print           reduce using rule 45 (ESTATUTO -> PRINT .)
    if              reduce using rule 45 (ESTATUTO -> PRINT .)
    while           reduce using rule 45 (ESTATUTO -> PRINT .)
    id              reduce using rule 45 (ESTATUTO -> PRINT .)
    rightBracket    reduce using rule 45 (ESTATUTO -> PRINT .)
    return          reduce using rule 45 (ESTATUTO -> PRINT .)


state 42

    (46) ESTATUTO -> COND .

    print           reduce using rule 46 (ESTATUTO -> COND .)
    if              reduce using rule 46 (ESTATUTO -> COND .)
    while           reduce using rule 46 (ESTATUTO -> COND .)
    id              reduce using rule 46 (ESTATUTO -> COND .)
    rightBracket    reduce using rule 46 (ESTATUTO -> COND .)
    return          reduce using rule 46 (ESTATUTO -> COND .)


state 43

    (47) ESTATUTO -> LLAMADAVOID .

    print           reduce using rule 47 (ESTATUTO -> LLAMADAVOID .)
    if              reduce using rule 47 (ESTATUTO -> LLAMADAVOID .)
    while           reduce using rule 47 (ESTATUTO -> LLAMADAVOID .)
    id              reduce using rule 47 (ESTATUTO -> LLAMADAVOID .)
    rightBracket    reduce using rule 47 (ESTATUTO -> LLAMADAVOID .)
    return          reduce using rule 47 (ESTATUTO -> LLAMADAVOID .)


state 44

    (48) ESTATUTO -> CICLO .

    print           reduce using rule 48 (ESTATUTO -> CICLO .)
    if              reduce using rule 48 (ESTATUTO -> CICLO .)
    while           reduce using rule 48 (ESTATUTO -> CICLO .)
    id              reduce using rule 48 (ESTATUTO -> CICLO .)
    rightBracket    reduce using rule 48 (ESTATUTO -> CICLO .)
    return          reduce using rule 48 (ESTATUTO -> CICLO .)


state 45

    (119) ASSIGN -> VARIABLE . equalSign EXPR semicolon qpAssignPN1
    (120) ASSIGN -> VARIABLE . equalSign INPUT semicolon qpInputPN1

    equalSign       shift and go to state 65


state 46

    (122) PRINT -> print . leftParenthesis PRINTARGS rightParenthesis semicolon

    leftParenthesis shift and go to state 66


state 47

    (95) COND -> if . leftParenthesis EXPCOMPARATIVA qpCondPN1 rightParenthesis BLOQUE qpCondPN2
    (96) COND -> if . leftParenthesis EXPCOMPARATIVA qpCondPN1 rightParenthesis BLOQUE qpCondPN3 else BLOQUE qpCondPN2
